fix word-wrapping: symbols display:inline

--- a/mathquill.css
+++ b/mathquill.css
@@ -17,9 +17,23 @@
     url(font/Symbola.svg#webfont7MzkO3xs) format("svg");
 }
 
-.mathquill-editable, .mathquill-embedded-latex .mathquill-editable {
+.mathquill-editable,
+.mathquill-editable .selection,
+.mathquill-rendered-math,
+.mathquill-rendered-math .selection,
+.mathquill-rendered-math .underline,
+.mathquill-rendered-math .overline,
+.mathquill-rendered-math .font,
+.mathquill-rendered-math sup,
+.mathquill-rendered-math sub,
+.mathquill-rendered-math .fraction,
+.mathquill-rendered-math .sqrt-stem,
+.mathquill-rendered-math .array,
+.mathquill-rendered-math .cmd {
   display: -moz-inline-box;
   display: inline-block;
+}
+.mathquill-editable, .mathquill-embedded-latex .mathquill-editable {
   border: 1px solid gray;
   padding: 2px;
 }
@@ -33,7 +47,6 @@
 
 .mathquill-editable .textarea, .mathquill-rendered-math .textarea {
   position: relative;
-  display: inline; /*so Firefox 3.6 (Gecko 1.9.2) won't wrap the box to 2 lines*/
   user-select: text;
   -moz-user-select: text;
   -webkit-user-select: text;
@@ -55,7 +68,6 @@
 .mathquill-editable .cursor {
   border-left: 1px solid black;
   margin-right: -1px;
-  display: inline;
   position: relative;
   z-index: 1;
 }
@@ -123,8 +135,6 @@
   font-style: normal;
   font-size: 115%;
   line-height: 1;
-  display: -moz-inline-box;
-  display: inline-block;
 }
 .mathquill-rendered-math var, .mathquill-rendered-math .text, .mathquill-rendered-math .nonSymbola {
   font-family: "Times New Roman", Symbola, serif;
@@ -132,8 +142,6 @@
 .mathquill-rendered-math * {
   font-size: inherit;
   line-height: inherit;
-  display: -moz-inline-box;
-  display: inline-block;
   margin: 0;
   padding: 0;
   border-color: black;
@@ -159,7 +167,6 @@
 }
 
 .mathquill-rendered-math .text {
-  display: inline;
   font-size: 87%;
 }
 
